--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,14 @@
 </head>
 <body>
 <header>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Books</a>
+        <a class="navbar-brand" href="">Books</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,11 +31,8 @@
                 <a class="nav-item nav-link" href="updateBook.html">Update Books</a>
             </div>
         </div>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </nav>
+
 </header>
 </body>
 </html>
