--- a/public/showBook.html
+++ b/public/showBook.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Show Books Page</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="stylesheets/style.css">
 
 </head>
@@ -15,7 +16,8 @@
 <header>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="">Books</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -38,7 +40,6 @@
 </div>
 <script>
     function CreateTable(data){
-        let dollarSign = "$";
         let table = "";
         table =
             '<table class="table table-bordered table-hover"> \n' +
@@ -59,7 +60,7 @@
                     '           <td>' + data[book]["Name"]+  '</td>\n' +
                     '           <td>' + data[book]["Author"]+  '</td>\n' +
                     '           <td>' + data[book]["ISBN"]+  '</td>\n' +
-                    '           <td>' + dollarSign + data[book]["Price"]+  '</td>\n' +
+                    '           <td>' + "$" + data[book]["Price"]+  '</td>\n' +
                     '       </tr>\n';
     }
 
